--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
 		"vite": "^6.0.0"
+	},
+	"dependencies": {
+		"sveltekit-superforms": "^2.21.1",
+		"zod": "^3.23.8"
 	}
 }
